<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ahorcadopng">


    <TextView
        android:id="@+id/user_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:layout_marginTop="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"/>

    <TextView
        android:id="@+id/pass_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass" />

    <Button
        android:text="@string/ok"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/ok"
        android:background="@android:color/transparent"
        android:onClick="validar"/>

    <Button
        android:text="@string/singin"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:id="@+id/singin"
        android:background="@android:color/transparent"
        android:onClick="insertar"/>

    <Button
        android:text="@string/cancel"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:background="@android:color/transparent"
        android:onClick="atras"/>


</LinearLayout>