<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ahorcadopng"
    tools:context="com.example.dani.ahorcado.MainActivity">

    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ahorcadopng"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="138dp"
        android:id="@+id/imageView" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="86dp"
        android:layout_below="@+id/main_titulo"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/jugador"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@android:color/transparent"
            android:text="@string/jugador1"
            android:onClick="modo_juego"/>

        <Button
            android:id="@+id/ayuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@android:color/transparent"
            android:text="@string/help"/>

        <Button
            android:id="@+id/salida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@android:color/transparent"
            android:text="@string/exit"
            android:onClick="salir"/>

    </LinearLayout>

    <TextView
        android:id="@+id/main_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="27dp"
        android:layout_marginTop="97dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
